--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ footer{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
+    background-color: #F5F4FA;
 }
 .project-examples:hover,
 .project-examples:focus,
