--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ background-color: var(--bg-color);
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
+    text-align: center;
 }
 .hero-button{
     color: var(--white-color);
@@ -69,6 +70,8 @@ background-color: var(--bg-color);
     font-size: 16px;
     line-height: 1.88;
     cursor: pointer;
+    border: 0px;
+    border-radius: 4px;
 }
 /* Main Section */
 .description-title{
@@ -85,6 +88,7 @@ background-color: var(--bg-color);
     font-size: 36px;
     line-height: 1.16;
     letter-spacing: 0.03em;
+    text-align: center;
 }
 .team-section{
     background: #F5F4FA;
